SPatch/zancun/ans/9664109

<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
  <title>[v2,6/9] mm: rmap: Use correct helper when poisoning hugepages - Patchwork</title>
  <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
  <script type="text/javascript" src="/static/js/common.js"></script>
  <script type="text/javascript" src="/static/js/jquery-1.10.1.min.js"></script>

 </head>
 <body>
  <div id="title">
  <h1 style="float: left;">
     <a
      href="/">Patchwork</a>
    [v2,6/9] mm: rmap: Use correct helper when poisoning hugepages</h1>
  <div id="auth">

     <a href="/user/login/">login</a>
     <br/>
     <a href="/register/">register</a>
     <br/>
     <a href="/mail/">mail settings</a>

   </div>
   <div style="clear: both;"></div>
  </div>
  <div id="nav">
   <div id="navleft">
   
    <strong>Project</strong>: LKML
     :
     <a href="/project/LKML/list/"
      >patches</a>
     :
     <a href="/project/LKML/"
      >project info</a>
    
     :
     <a href="/"
     >other projects</a>
     
    
   </div>
   <div id="navright">
    <a href="/help/about/">about</a>
   </div>
   <div style="clear: both"></div>
  </div>

  <div id="content">

<script language="JavaScript" type="text/javascript">
function toggle_headers(link_id, headers_id)
{
    var link = document.getElementById(link_id)
    var headers = document.getElementById(headers_id)

    var hidden = headers.style['display'] == 'none';

    if (hidden) {
        link.innerHTML = 'hide';
        headers.style['display'] = 'block';
    } else {
        link.innerHTML = 'show';
        headers.style['display'] = 'none';
    }

}
</script>

<table class="patchmeta">
 <tr>
  <th>Submitter</th>
  <td><a href="/project/LKML/list/?submitter=58591">Punit Agrawal</a></td>
 </tr>
 <tr>
  <th>Date</th>
  <td>April 5, 2017, 1:37 p.m.</td>
 </tr>
 <tr>
  <th>Message ID</th>
  <td>&lt;20170405133722.6406-7-punit.agrawal@arm.com&gt;</td>
 </tr>
 <tr>
  <th>Download</th>
  <td>
   <a href="/patch/9664109/mbox/"
   >mbox</a>
|
   <a href="/patch/9664109/raw/"
   >patch</a>

   </td>
 </tr>
 <tr>
  <th>Permalink</th>
  <td><a href="/patch/9664109/">/patch/9664109/</a>
 </tr>
  <tr>
   <th>State</th>
   <td>New</td>
  </tr>


 <tr>
  <th>Headers</th>
  <td><a id="togglepatchheaders"
   href="javascript:toggle_headers('togglepatchheaders', 'patchheaders')"
   >show</a>
   <div id="patchheaders" class="patchheaders" style="display:none;">
    <pre>Return-Path: &lt;linux-kernel-owner@kernel.org&gt;
Received: from mail.wl.linuxfoundation.org (pdx-wl-mail.web.codeaurora.org
	[172.30.200.125])
	by pdx-korg-patchwork.web.codeaurora.org (Postfix) with ESMTP id
	8213E60364 for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed,  5 Apr 2017 13:39:11 +0000 (UTC)
Received: from mail.wl.linuxfoundation.org (localhost [127.0.0.1])
	by mail.wl.linuxfoundation.org (Postfix) with ESMTP id 6C956284DB
	for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed,  5 Apr 2017 13:39:11 +0000 (UTC)
Received: by mail.wl.linuxfoundation.org (Postfix, from userid 486)
	id 615822852E; Wed,  5 Apr 2017 13:39:11 +0000 (UTC)
X-Spam-Checker-Version: SpamAssassin 3.3.1 (2010-03-16) on
	pdx-wl-mail.web.codeaurora.org
X-Spam-Level: 
X-Spam-Status: No, score=-6.9 required=2.0 tests=BAYES_00,RCVD_IN_DNSWL_HI
	autolearn=ham version=3.3.1
Received: from vger.kernel.org (vger.kernel.org [209.132.180.67])
	by mail.wl.linuxfoundation.org (Postfix) with ESMTP id D612B28518
	for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed,  5 Apr 2017 13:39:10 +0000 (UTC)
Received: (majordomo@vger.kernel.org) by vger.kernel.org via listexpand
	id S1753567AbdDENjI (ORCPT
	&lt;rfc822;patchwork-LKML@patchwork.kernel.org&gt;);
	Wed, 5 Apr 2017 09:39:08 -0400
Received: from foss.arm.com ([217.140.101.70]:58898 &quot;EHLO foss.arm.com&quot;
	rhost-flags-OK-OK-OK-OK) by vger.kernel.org with ESMTP
	id S1751777AbdDENiS (ORCPT &lt;rfc822;linux-kernel@vger.kernel.org&gt;);
	Wed, 5 Apr 2017 09:38:18 -0400
Received: from usa-sjc-imap-foss1.foss.arm.com (unknown [10.72.51.249])
	by usa-sjc-mx-foss1.foss.arm.com (Postfix) with ESMTP id D91921684;
	Wed,  5 Apr 2017 06:38:17 -0700 (PDT)
Received: from localhost (e105922-lin.cambridge.arm.com [10.1.195.42])
	by usa-sjc-imap-foss1.foss.arm.com (Postfix) with ESMTPSA id
	AAC293F3E1; Wed,  5 Apr 2017 06:38:17 -0700 (PDT)
From: Punit Agrawal &lt;punit.agrawal@arm.com&gt;
To: catalin.marinas@arm.com, will.deacon@arm.com,
	akpm@linux-foundation.org, mark.rutland@arm.com
Cc: Punit Agrawal &lt;punit.agrawal@arm.com&gt;, linux-mm@kvack.org,
	linux-arm-kernel@lists.infradead.org, linux-kernel@vger.kernel.org,
	tbaicar@codeaurora.org, kirill.shutemov@linux.intel.com,
	mike.kravetz@oracle.com, hillf.zj@alibaba-inc.com, steve.capper@arm.com
Subject: [PATCH v2 6/9] mm: rmap: Use correct helper when poisoning hugepages
Date: Wed,  5 Apr 2017 14:37:19 +0100
Message-Id: &lt;20170405133722.6406-7-punit.agrawal@arm.com&gt;
X-Mailer: git-send-email 2.11.0
In-Reply-To: &lt;20170405133722.6406-1-punit.agrawal@arm.com&gt;
References: &lt;20170405133722.6406-1-punit.agrawal@arm.com&gt;
Sender: linux-kernel-owner@vger.kernel.org
Precedence: bulk
List-ID: &lt;linux-kernel.vger.kernel.org&gt;
X-Mailing-List: linux-kernel@vger.kernel.org
X-Virus-Scanned: ClamAV using ClamSMTP
</pre>
   </div>
  </td>
 </tr>
</table>

<div class="patchforms">





 <div style="clear: both;">
 </div>
</div>



<h2>Comments</h2>

<div class="comment">
<div class="meta"><a href="/project/LKML/list/?submitter=58591">Punit Agrawal</a> - April 5, 2017, 1:37 p.m.</div>
<pre class="content">
Using set_pte_at() does not do the right thing when putting down
HWPOISON swap entries for hugepages on architectures that support
contiguous ptes.

Fix this problem by using set_huge_swap_pte_at() which was introduced to
fix exactly this problem.
<span class="signed-off-by">
Signed-off-by: Punit Agrawal &lt;punit.agrawal@arm.com&gt;</span>
Cc: &quot;Kirill A. Shutemov&quot; &lt;kirill.shutemov@linux.intel.com&gt;
---
 mm/rmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
</pre>
</div>

<div class="comment">
<div class="meta"><a href="/project/LKML/list/?submitter=143191">kbuild test robot</a> - April 6, 2017, 1:25 a.m.</div>
<pre class="content">
Hi Punit,

[auto build test ERROR on arm64/for-next/core]
[also build test ERROR on v4.11-rc5 next-20170405]
[if your patch is applied to the wrong git tree, please drop us a note to help improve the system]

url:    https://github.com/0day-ci/linux/commits/Punit-Agrawal/Support-swap-entries-for-contiguous-pte-hugepages/20170406-090327
base:   https://git.kernel.org/pub/scm/linux/kernel/git/arm64/linux.git for-next/core
config: i386-tinyconfig (attached as .config)
compiler: gcc-6 (Debian 6.2.0-3) 6.2.0 20160901
reproduce:
        # save the attached .config to linux build tree
        make ARCH=i386 

All errors (new ones prefixed by &gt;&gt;):

   mm/rmap.c: In function &#39;try_to_unmap_one&#39;:
<span class="quote">&gt;&gt; mm/rmap.c:1393:5: error: implicit declaration of function &#39;set_huge_swap_pte_at&#39; [-Werror=implicit-function-declaration]</span>
        set_huge_swap_pte_at(mm, address,
        ^~~~~~~~~~~~~~~~~~~~
   cc1: some warnings being treated as errors

vim +/set_huge_swap_pte_at +1393 mm/rmap.c

  1387	
  1388			if (PageHWPoison(page) &amp;&amp; !(flags &amp; TTU_IGNORE_HWPOISON)) {
  1389				pteval = swp_entry_to_pte(make_hwpoison_entry(subpage));
  1390				if (PageHuge(page)) {
  1391					int nr = 1 &lt;&lt; compound_order(page);
  1392					hugetlb_count_sub(nr, mm);
<span class="quote">&gt; 1393					set_huge_swap_pte_at(mm, address,</span>
  1394							     pvmw.pte, pteval,
  1395							     vma_mmu_pagesize(vma));
  1396				} else {

---
0-DAY kernel test infrastructure                Open Source Technology Center
https://lists.01.org/pipermail/kbuild-all                   Intel Corporation
</pre>
</div>



<h2>Patch</h2>
<div class="patch">
<pre class="content">
<span class="p_header">diff --git a/mm/rmap.c b/mm/rmap.c</span>
<span class="p_header">index f6838015810f..e07c7912a166 100644</span>
<span class="p_header">--- a/mm/rmap.c</span>
<span class="p_header">+++ b/mm/rmap.c</span>
<span class="p_chunk">@@ -1386,15 +1386,19 @@</span> <span class="p_context"> static int try_to_unmap_one(struct page *page, struct vm_area_struct *vma,</span>
 		update_hiwater_rss(mm);
 
 		if (PageHWPoison(page) &amp;&amp; !(flags &amp; TTU_IGNORE_HWPOISON)) {
<span class="p_add">+			pteval = swp_entry_to_pte(make_hwpoison_entry(subpage));</span>
 			if (PageHuge(page)) {
 				int nr = 1 &lt;&lt; compound_order(page);
 				hugetlb_count_sub(nr, mm);
<span class="p_add">+				set_huge_swap_pte_at(mm, address,</span>
<span class="p_add">+						     pvmw.pte, pteval,</span>
<span class="p_add">+						     vma_mmu_pagesize(vma));</span>
 			} else {
 				dec_mm_counter(mm, mm_counter(page));
<span class="p_add">+				set_pte_at(mm, address, pvmw.pte, pteval);</span>
 			}
 
<span class="p_del">-			pteval = swp_entry_to_pte(make_hwpoison_entry(subpage));</span>
<span class="p_del">-			set_pte_at(mm, address, pvmw.pte, pteval);</span>
<span class="p_add">+</span>
 		} else if (pte_unused(pteval)) {
 			/*
 			 * The guest indicated that the page content is of no

</pre>
</div>




  </div>
  <div id="footer">
   <a href="http://jk.ozlabs.org/projects/patchwork/">patchwork</a>
   patch tracking system
  </div>
 </body>
</html>



